# RayLang

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md  meson.build  meson_options.txt
RayC/: meson.build
RayC/include/ray/: ray_definitions.h
RayC/include/ray/cli/: cli_args.hpp  definitions.hpp  options.hpp  terminal.hpp
RayC/include/ray/compiler/: error_bag.hpp  message_bag.hpp  scanner.hpp  token.hpp  tokenizer.hpp
RayC/include/ray/compiler/S1/lang/: S1SourceUnit.hpp
RayC/include/ray/compiler/analyzers/: resolver.hpp  symbolTableGenerator.hpp
RayC/include/ray/compiler/ast/: expression.hpp  intrinsic.hpp  statement.hpp  typedstatement.hpp
RayC/include/ray/compiler/ast/typed/: TypedExpression.hpp  TypedStatement.hpp  typedexpression.hpp
RayC/include/ray/compiler/directives/: compilerDirective.hpp  linkageDirective.hpp
RayC/include/ray/compiler/environment/dataModel/: dataModel.hpp
RayC/include/ray/compiler/generators/: c_source.hpp  wasm_text.hpp
RayC/include/ray/compiler/generators/c/: c_mangler.hpp  c_transpiler.hpp
RayC/include/ray/compiler/generators/wasm/: wasm_text.hpp
RayC/include/ray/compiler/lang/: depSourceUnit.hpp  functionDefinition.hpp  moduleStore.hpp  scope.hpp  sourceUnit.hpp  struct.hpp  structDefinition.hpp  symbol.hpp  trait.hpp  type.hpp
RayC/include/ray/compiler/lexer/: lexer.hpp  lexer_error.hpp  token.hpp
RayC/include/ray/compiler/parser/: parser.hpp
RayC/include/ray/compiler/passes/: resolver.hpp  symbolResolver.hpp  symbol_mangler.hpp  topLevelResolver.hpp  typeChecker.hpp  typeScanner.hpp
RayC/include/ray/compiler/syntax/ast/: Expression.hpp  Statement.hpp  intrinsic.hpp
RayC/include/ray/compiler/syntax/common/: intrinsic.hpp
RayC/include/ray/compiler/syntax/rst/: Expression.hpp  Statement.hpp  rst.hpp
RayC/include/ray/compiler/types/: types.hpp
RayC/include/ray/generators/: wasm_text.hpp
RayC/include/ray/util/: copy_ptr.hpp  soft_reference.hpp
RayC/src/: source.cpp
RayC/src/ast/: parser.cpp
RayC/src/cli/: cli_args.cpp  options.cpp  terminal.cpp
RayC/src/compiler/: error_bag.cpp  message_bag.cpp
RayC/src/compiler/S1/lang/: S1SourceUnit.cpp
RayC/src/compiler/analyzers/: resolver.cpp  symbolTableGenerator.cpp
RayC/src/compiler/ast/: intrinsic.cpp
RayC/src/compiler/environment/dataModel/: dataModel.cpp
RayC/src/compiler/generators/: c_source.cpp  wasm_text.cpp
RayC/src/compiler/generators/c/: c_mangler.cpp  c_transpiler.cpp
RayC/src/compiler/generators/wasm/: wasm_text.cpp
RayC/src/compiler/lang/: depSourceUnit.cpp  scope.cpp  sourceUnit.cpp  struct.cpp  trait.cpp  type.cpp
RayC/src/compiler/lexer/: lexer.cpp  lexer_error.cpp  token.cpp
RayC/src/compiler/parser/: parser.cpp
RayC/src/compiler/passes/: resolver.cpp  symbol_mangler.cpp  topLevelResolver.cpp  typeChecker.cpp  typeScanner.cpp
RayC/src/compiler/syntax/ast/: intrinsic.cpp
RayC/src/compiler/syntax/common/: intrinsic.cpp
RayC/src/compiler/types/: types.cpp
RayVM/: meson.build
RayVM-cli/: meson.build
RayVM-cli/include/rayvmapp/: cli_args.hpp  definitions.hpp  options.hpp  terminal.hpp
RayVM-cli/src/: cli_args.cpp  options.cpp  source.cpp  terminal.cpp
RayVM/include/ray/vm/: assembler.hpp  bytecode.hpp  cpu.hpp  definitions.hpp  memory.hpp  vm.hpp
RayVM/src/: assembler.cpp  memory.cpp  vm.cpp
examples/: .gitignore  fibonacci.ray  playground_barebones.ray
libs/: .gitignore  cstdio.ray
libs/c/: stdio.c
modules/: .gitignore  cstdio.ray
modules/clib/: cstdio.ray  cstdlib.ray
modules/cstd/: io.ray  math.ray  std.ray  string.ray
modules/std/: array.ray  memory.ray  result.ray  string.ray  vector.ray
subprojects/: .gitignore
tool/: generateAST.py  generateAst.py  generateRST.py
